--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </header>
         <main>
             <div class="grid">
-                <div id="nasa"></div>
-                <div id="coming-soon"></div>
-              </div>                 
+                <div class="grid-item" id="nasa"></div>
+                <div class="grid-item" id="coming-soon"></div>
+            </div>                 
         </main>
     </body>
 </html>
