--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <h1>☆ makecute ☆</h1>
         </header>
         <main>
+            <div id="info">
+                <span id="infotitle">browse</span>
+            </div>
             <div class="grid">
                 <div class="grid-item" id="nasa"></div>
                 <div class="grid-item" id="coming-soon"></div>
