cors said no fun

--- a/nasa.html
+++ b/nasa.html
@@ -46,7 +46,7 @@
                                 <label>gay</label>
                             </div>
                         </div>
-                        <button id="download" class="block">Download</button>
+                        <p>right click (or press hold on mobile) to download</p>
                     </form>        
                 </div>
             </div>                 
