added meta tags for the clout :pensive:

--- a/nasa.html
+++ b/nasa.html
@@ -9,6 +9,14 @@
         <link rel="stylesheet" type="text/css" href="css/nasa.css">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/nasa.js"></script>
+
+        <meta property="og:title" content="nasa pfp @makecute">
+        <meta property="og:description" content="Customize the NASA logo for semi-evil reasons.">
+        <meta property="og:image" content="../img/thumbnail.jpg">
+        <meta property="og:url" content="https://mobiusdonut.github.io/makecute/nasa">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="og:site_name" content="nasa pfp @makecute">
+        <meta name="twitter:image:alt" content="Customize the NASA logo for semi-evil reasons.">
     </head>
 
     <body>
