--- a/nasa.html
+++ b/nasa.html
@@ -12,7 +12,7 @@
 
         <meta property="og:title" content="nasa pfp @makecute">
         <meta property="og:description" content="Customize the NASA logo for semi-evil reasons.">
-        <meta property="og:image" content="../img/thumbnail.jpg">
+        <meta property="og:image" content="img/thumbnail.jpg">
         <meta property="og:url" content="https://mobiusdonut.github.io/makecute/nasa">
         <meta name="twitter:card" content="summary_large_image">
         <meta property="og:site_name" content="nasa pfp @makecute">
