--- a/nasa.html
+++ b/nasa.html
@@ -9,10 +9,13 @@
         <link rel="stylesheet" type="text/css" href="css/nasa.css">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/nasa.js"></script>
-
+        <link rel="shortcut icon" type="image/svg" href="img/pfp.png"/>
+        <link rel="shortcut icon" type="image/svg" href="img/pfp.png"/>
         <meta property="og:title" content="nasa pfp @makecute">
         <meta property="og:description" content="Customize the NASA logo for semi-evil reasons.">
         <meta property="og:image" content="img/thumbnail.png">
+        <meta property="og:image:width" content="2364" />
+        <meta property="og:image:height" content="1606" />
         <meta property="og:url" content="https://mobiusdonut.github.io/makecute/nasa">
         <meta name="twitter:card" content="summary_large_image">
         <meta property="og:site_name" content="nasa pfp @makecute">
