--- a/nasa.html
+++ b/nasa.html
@@ -10,7 +10,6 @@
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/nasa.js"></script>
         <link rel="shortcut icon" type="image/svg" href="img/pfp.png"/>
-        <link rel="shortcut icon" type="image/svg" href="img/pfp.png"/>
         <meta property="og:title" content="nasa pfp @makecute">
         <meta property="og:description" content="Customize the NASA logo for semi-evil reasons.">
         <meta property="og:image" content="img/thumbnail.png">
@@ -19,6 +18,7 @@
         <meta property="og:url" content="https://mobiusdonut.github.io/makecute/nasa">
         <meta name="twitter:card" content="summary_large_image">
         <meta property="og:site_name" content="nasa pfp @makecute">
+        <meta property="twitter:image:src" content="img/thumbnail.png">
         <meta name="twitter:image:alt" content="Customize the NASA logo for semi-evil reasons.">
     </head>
 
