--- a/nasa.html
+++ b/nasa.html
@@ -12,13 +12,13 @@
         <link rel="shortcut icon" type="image/svg" href="img/pfp.png"/>
         <meta property="og:title" content="nasa pfp @makecute">
         <meta property="og:description" content="Customize the NASA logo for semi-evil reasons.">
-        <meta property="og:image" content="img/thumbnail.png">
+        <meta property="og:image" content="https://github.com/mobiusdonut/makecute/raw/master/img/thumbnail.png">
         <meta property="og:image:width" content="2364" />
         <meta property="og:image:height" content="1606" />
         <meta property="og:url" content="https://mobiusdonut.github.io/makecute/nasa">
         <meta name="twitter:card" content="summary_large_image">
         <meta property="og:site_name" content="nasa pfp @makecute">
-        <meta property="twitter:image:src" content="img/thumbnail.png">
+        <meta property="twitter:image:src" content="https://github.com/mobiusdonut/makecute/raw/master/img/thumbnail.png">
         <meta name="twitter:image:alt" content="Customize the NASA logo for semi-evil reasons.">
     </head>
 
