--- a/nasa.html
+++ b/nasa.html
@@ -57,6 +57,12 @@
                                 <label>gay</label>
                             </div>
                         </div>
+                        <div class="pretty p-default p-round">
+                            <input type="radio" name="grd" value="bi"/>
+                            <div class="state p-bi">
+                                <label>bi</label>
+                            </div>
+                        </div>
                         <p>right click (or press hold on mobile) to download</p>
                     </form>        
                 </div>
