--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>makecute</title>
+        <link rel="shortcut icon" type="image/svg" href="img/pfp.png"/>
         <link rel="stylesheet" type="text/css" href="css/fonts.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <script type="text/javascript" src="js/index.js"></script>
@@ -17,7 +18,8 @@
                 <img id="infoimg" src="img/pfp.png" height="200px"></img>
                 <div>
                     <h1 id="infotitle">browse</h1>
-                    <p id="infop">click on an item to preview</p>  
+                    <p id="infop">click on an item to preview</p>
+                    <a id="infolink">go</a> 
                 </div>                 
             </div>
             <div class="grid">
