--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <h1><a href="/" id="headerlink">☆ makecute ☆</a></h1>
+            <h1><a href="" id="headerlink">☆ makecute ☆</a></h1>
         </header>
         <main>
             <div id="info">
@@ -19,7 +19,7 @@
                 <div>
                     <h1 id="infotitle">browse</h1>
                     <p id="infop">click on an item to preview</p>
-                    <a href="/" id="infolink">go</a> 
+                    <a href="" id="infolink">go</a> 
                 </div>                 
             </div>
             <div class="grid">
