--- a/nasa.html
+++ b/nasa.html
@@ -24,7 +24,7 @@
 
     <body>
         <header>
-            <h1><a href="/" id="headerlink">☆ makecute ☆</a></h1>
+            <h1><a href="/makecute" id="headerlink">☆ makecute ☆</a></h1>
         </header>
         <main>
             <div class="container">
